--- a/style/common.scss
+++ b/style/common.scss
@@ -22,6 +22,8 @@ $ts-heading-01: clamp(2rem, 3vw, 2.625rem);
 $ts-heading-02: clamp(1.9rem, 2.5vw, 2.375rem);
 $ts-heading-03: clamp(1.2rem, 2vw, 1.25rem);
 $ts-heading-04: clamp(2rem, 2vw, 2.13333rem);
+$ts-heading-05: clamp(0.5rem, 1vw, 0.866667rem);
+
 // desc
 $ts-desc-01: clamp(1rem, 2vw, 1.125rem);
 $ts-desc-02: clamp(1rem, 2vw, 1.4275rem);
@@ -38,6 +40,9 @@ $ts-font-weight-600: 600;
 $ts-font-weight-700: 700;
 // font family
 $ts-font-family: ProximaNova, sans-serif;
+// padding
+$section-padding: 72px;
+
 %heading {
   color: $text-dark-primary-color;
   word-break: break-word;
@@ -67,5 +72,12 @@ $ts-font-family: ProximaNova, sans-serif;
     color: $text-color-dark;
     font-family: $ts-font-family;
     font-size: $ts-heading-04;
+  }
+  &-05 {
+    line-height: 1.23;
+    font-weight: $ts-font-weight-700;
+    color: $text-color-dark;
+    font-family: $ts-font-family;
+    font-size: $ts-heading-05;
   }
 }
