--- a/style/common.scss
+++ b/style/common.scss
@@ -18,17 +18,17 @@ $text-red-color: rgb(255, 88, 88);
 $bg-white-haf-color: rgb(246, 250, 255);
 // font size
 // heading
-$ts-heading-01: clamp(2rem, 3vw, 2.625rem);
-$ts-heading-02: clamp(1.9rem, 2.5vw, 2.375rem);
+$ts-heading-01: clamp(2.2rem, 3vw, 2.625rem);
+$ts-heading-02: clamp(2rem, 2.5vw, 2.375rem);
 $ts-heading-03: clamp(1.2rem, 2vw, 1.25rem);
 $ts-heading-04: clamp(2rem, 2vw, 2.13333rem);
-$ts-heading-05: clamp(0.5rem, 1vw, 0.866667rem);
+$ts-heading-05: clamp(0.8rem, 1vw, 0.9rem);
 
 // desc
-$ts-desc-01: clamp(1rem, 2vw, 1.125rem);
+$ts-desc-01: clamp(2rem, 2vw, 2.13333rem);
 $ts-desc-02: clamp(1rem, 2vw, 1.4275rem);
-$ts-desc-03: clamp(9rem, 1vw, 1rem);
-$ts-desc-04: clamp(2rem, 2vw, 2.13333rem);
+$ts-desc-03: clamp(1rem, 2vw, 1.125rem);
+$ts-desc-04: clamp(0.9rem, 1vw, 1rem);
 
 // font weight
 $ts-font-weight-100: 100;
@@ -43,10 +43,12 @@ $ts-font-family: ProximaNova, sans-serif;
 // padding
 $section-padding: 72px;
 
+// heading
 %heading {
   color: $text-dark-primary-color;
   word-break: break-word;
   font-family: $ts-font-family;
+  color: $text-dark-primary-color;
 }
 .TsHeading {
   &-01 {
@@ -79,5 +81,32 @@ $section-padding: 72px;
     color: $text-color-dark;
     font-family: $ts-font-family;
     font-size: $ts-heading-05;
+  }
+  &-06 {
+    font-weight: $ts-font-weight-600;
+  }
+}
+// descriptions
+
+.TsDesc {
+  &-02 {
+    color: $text-black-haf-color;
+    font-size: $ts-desc-02;
+    font-weight: $ts-font-weight-400;
+    line-height: 1.21739;
+    font-family: $ts-font-family;
+  }
+  &-03 {
+    color: $text-black-haf-color;
+    font-size: $ts-desc-03;
+    font-weight: $ts-font-weight-400;
+    line-height: 1.77778;
+    font-family: $ts-font-family;
+  }
+  &-04 {
+    font-size: $ts-desc-04;
+    font-family: $ts-font-family;
+    color: $text-black-haf-color;
+    line-height: 1.14;
   }
 }
