--- a/style/services.css
+++ b/style/services.css
@@ -129,4 +129,25 @@
   color: #4a5a6d;
   line-height: 1.87;
 }
+
+.TsServices-link .nav-link:hover {
+  text-decoration: underline;
+}
+
+@media (max-width: 1200px) {
+  .TsServices-link {
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media (max-width: 800px) {
+  .TsServices {
+    padding: 40px;
+  }
+  .TsServices-cont {
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+  }
+}
 /*# sourceMappingURL=services.css.map */
