--- a/style/fq.css
+++ b/style/fq.css
@@ -108,7 +108,11 @@
 
 .accordion-last-btn {
   background-color: #f0f2f4;
-  padding: 30px;
+  padding: 30px 40px;
+}
+
+.accordion-last-btn .nav-link:hover {
+  text-decoration: underline;
 }
 
 @media (max-width: 1000px) {
