--- a/style/fq.scss
+++ b/style/fq.scss
@@ -26,7 +26,10 @@
 }
 .accordion-last-btn {
   background-color: #f0f2f4;
-  padding: 30px;
+  padding: 30px 40px;
+  .nav-link:hover {
+    text-decoration: underline;
+  }
 }
 @media (max-width: 1000px) {
   .fq {
