--- a/style/contact.css
+++ b/style/contact.css
@@ -89,6 +89,7 @@
   display: flex;
   background-color: #eaf3ff;
   border-radius: 10px;
+  overflow: hidden;
 }
 
 .contact-card-mini {
@@ -126,6 +127,11 @@
 
 .contact-card:nth-child(2) {
   width: 40%;
+}
+
+.contact-card-img {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 @media (max-width: 1100px) {
