--- a/style/contact.scss
+++ b/style/contact.scss
@@ -4,6 +4,7 @@
   display: flex;
   background-color: rgb(234, 243, 255);
   border-radius: 10px;
+  overflow: hidden;
   &-card {
     &-mini {
       display: grid;
@@ -35,6 +36,9 @@
     }
     &:nth-child(2) {
       width: 40%;
+    }
+    &-img {
+      object-fit: cover;
     }
   }
 }
