--- a/style/mission.css
+++ b/style/mission.css
@@ -82,37 +82,39 @@
   color: #fff;
 }
 
-.TsFooter {
-  border-top: 1px solid #dee6f0;
+.mission {
   padding: 72px;
-  background-color: #f6faff;
 }
 
-.TsFooter-container {
-  max-width: 1600px;
+.mission-cont {
+  max-width: 1440px;
+  display: -ms-grid;
+  display: grid;
+  grid-column-gap: 8rem;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
 }
 
-.TsFooter-container-nav .nav-item {
-  margin-bottom: 8px;
+@media (max-width: 1000px) {
+  .mission-cont {
+    max-width: 1440px;
+    display: -ms-grid;
+    display: grid;
+    grid-gap: 2rem;
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+  }
 }
 
-.TsFooter-container-nav .nav-item .nav-link {
-  font-size: 0.933333rem;
-  font-family: ProximaNova, sans-serif;
-  color: #4a5a6d;
-  line-height: 1.14;
+@media (max-width: 700px) {
+  .mission {
+    padding: 30px;
+  }
 }
 
-.TsFooter-container-nav .nav-item .nav-link:hover {
-  color: #1082ea;
-  text-decoration: underline;
+@media (max-width: 500px) {
+  .mission {
+    padding: 10px;
+  }
 }
-
-.TsFooter-container-icon .fab {
-  color: #1566dc;
-  padding: 10px;
-  font-size: 20px;
-  border-radius: 100px;
-  border: 3px solid rgba(128, 128, 128, 0.401);
-}
-/*# sourceMappingURL=footer.css.map */
+/*# sourceMappingURL=mission.css.map */
