--- a/style/garages.scss
+++ b/style/garages.scss
@@ -5,12 +5,16 @@
     max-width: 1440px;
   }
 }
-// @media (max-width: 1000px) {
-//   .garages {
-//     &-cont {
-//     }
-//   }
-// }
+@media (max-width: 991px) {
+  .garages {
+    padding: 40px;
+  }
+}
+@media (max-width: 400px) {
+  .garages {
+    padding: 10px;
+  }
+}
 // @media (max-width: 700px) {
 //   .garages {
 //     padding: 30px;
