--- a/style/mission.css
+++ b/style/mission.css
@@ -18,7 +18,7 @@
 
 .TsHeading-02 {
   font-weight: 700;
-  font-size: clamp(2.3rem, 3vw, 2.375rem);
+  font-size: clamp(2rem, 3vw, 2.375rem);
   line-height: 1.05263;
 }
 
@@ -88,31 +88,25 @@
 
 .mission-cont {
   max-width: 1440px;
-  display: -ms-grid;
-  display: grid;
-  grid-column-gap: 8rem;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
 }
 
-@media (max-width: 1000px) {
-  .mission-cont {
-    max-width: 1440px;
-    display: -ms-grid;
-    display: grid;
-    grid-gap: 2rem;
-    -ms-grid-columns: (1fr)[1];
-        grid-template-columns: repeat(1, 1fr);
-  }
-}
-
-@media (max-width: 700px) {
+@media (max-width: 991px) {
   .mission {
-    padding: 30px;
+    padding: 40px;
+  }
+  .mission-content {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+  .mission-img {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 400px) {
   .mission {
     padding: 10px;
   }
