--- a/style/reviews.css
+++ b/style/reviews.css
@@ -31,19 +31,19 @@
 }
 
 .TsHeading-01 {
-  font-size: clamp(2.2rem, 3vw, 2.625rem);
+  font-size: clamp(2.4rem, 4vw, 2.625rem);
   line-height: 1.04762;
   font-weight: 600;
 }
 
 .TsHeading-02 {
   font-weight: 700;
-  font-size: clamp(2rem, 3vw, 2.375rem);
+  font-size: clamp(2.2rem, 4vw, 2.375rem);
   line-height: 1.05263;
 }
 
 .TsHeading-03 {
-  font-size: clamp(1.2rem, 2vw, 1.25rem);
+  font-size: clamp(1.2rem, 3vw, 1.25rem);
   font-weight: 600;
 }
 
@@ -52,7 +52,7 @@
   font-weight: 200;
   color: #32382e;
   font-family: ProximaNova, sans-serif;
-  font-size: clamp(2rem, 2vw, 2.13333rem);
+  font-size: clamp(2.1rem, 3vw, 2.13333rem);
 }
 
 .TsHeading-05 {
@@ -60,7 +60,7 @@
   font-weight: 700;
   color: #32382e;
   font-family: ProximaNova, sans-serif;
-  font-size: clamp(0.8rem, 1vw, 0.9rem);
+  font-size: clamp(0.8rem, 2vw, 0.9rem);
 }
 
 .TsHeading-06 {
@@ -69,7 +69,7 @@
 
 .TsDesc-02 {
   color: #4a5a6d;
-  font-size: clamp(1rem, 2vw, 1.4275rem);
+  font-size: clamp(1.4rem, 3vw, 1.4275rem);
   font-weight: 400;
   line-height: 1.21739;
   font-family: ProximaNova, sans-serif;
@@ -77,7 +77,7 @@
 
 .TsDesc-03 {
   color: #4a5a6d;
-  font-size: clamp(1rem, 2vw, 1.125rem);
+  font-size: clamp(1.1rem, 2vw, 1.125rem);
   font-weight: 400;
   line-height: 1.77778;
   font-family: ProximaNova, sans-serif;
@@ -108,6 +108,71 @@
 
 .review-cont {
   max-width: 1440px;
+  overflow: hidden;
+}
+
+.review-header .star {
+  padding: 1px 5px 5px 5px;
+  background: #73cf11;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.review-header .star svg {
+  color: #fff;
+}
+
+.review-header .star:nth-last-child {
+  background-color: #e61a1a;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  padding-bottom: 120px;
+}
+
+.swiper-slide {
+  padding: 20px;
+  width: 400px;
+  background: #fff;
+}
+
+.swiper-slide .star {
+  padding: 1px 5px 5px 5px;
+  background: #00b67a;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.swiper-slide .star svg {
+  color: #fff;
+}
+
+.swiper-btn-next, .swiper-btn-prev {
+  position: absolute;
+  bottom: 8px;
+  padding: 15px 20px;
+  border-radius: 100%;
+  background-color: #fff;
+  -webkit-box-shadow: 0px 0px 7px 3px rgba(134, 196, 255, 0.179);
+          box-shadow: 0px 0px 7px 3px rgba(134, 196, 255, 0.179);
+}
+
+.swiper-btn-next:hover, .swiper-btn-prev:hover {
+  -webkit-box-shadow: 0px 0px 7px 4px rgba(134, 196, 255, 0.582);
+          box-shadow: 0px 0px 7px 4px rgba(134, 196, 255, 0.582);
+}
+
+.swiper-btn-prev {
+  right: 20px;
+}
+
+.swiper-btn-next {
+  right: 120px;
 }
 
 .experts {
