--- a/style/reviews.css
+++ b/style/reviews.css
@@ -111,22 +111,6 @@
   overflow: hidden;
 }
 
-.review-header .star {
-  padding: 1px 5px 5px 5px;
-  background: #73cf11;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.review-header .star svg {
-  color: #fff;
-}
-
-.review-header .star:nth-last-child {
-  background-color: #e61a1a;
-}
-
 .swiper {
   width: 100%;
   height: 100%;
@@ -138,18 +122,6 @@
   padding: 20px;
   width: 400px;
   background: #fff;
-}
-
-.swiper-slide .star {
-  padding: 1px 5px 5px 5px;
-  background: #00b67a;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.swiper-slide .star svg {
-  color: #fff;
 }
 
 .swiper-btn-next, .swiper-btn-prev {
@@ -175,6 +147,33 @@
   right: 120px;
 }
 
+.LightGreenStar,
+.WhiteStar,
+.GreenStar {
+  padding: 0px 5px 6px 5px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.LightGreenStar svg,
+.WhiteStar svg,
+.GreenStar svg {
+  color: #fff;
+}
+
+.LightGreenStar {
+  background: #73cf11;
+}
+
+.WhiteStar {
+  background: #dcdce6;
+}
+
+.GreenStar {
+  background: #00b67a;
+}
+
 .experts {
   max-width: 1440px;
   display: -ms-grid;
@@ -198,16 +197,16 @@
 }
 
 @media (max-width: 1000px) {
-  .review-details {
+  .experts {
     -ms-grid-columns: (1fr)[2];
         grid-template-columns: repeat(2, 1fr);
   }
-  .review-details-card {
+  .experts-card {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
   }
-  .review-details-card img {
+  .experts-card img {
     width: 64px;
     height: 64px;
     margin-right: 15px;
@@ -215,12 +214,13 @@
 }
 
 @media (max-width: 560px) {
-  .review-details {
+  .experts {
+    padding: 10px;
     -ms-grid-columns: (1fr)[1];
         grid-template-columns: repeat(1, 1fr);
     text-align: center;
   }
-  .review-details-card {
+  .experts-card {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -229,7 +229,7 @@
         -ms-flex-align: center;
             align-items: center;
   }
-  .review-details-card img {
+  .experts-card img {
     width: 64px;
     height: 64px;
     margin-right: 15px;
