--- a/style/footer.scss
+++ b/style/footer.scss
@@ -1,5 +1,7 @@
 @import 'common';
 .TsFooter {
+  min-width: 350px;
+
   border-top: 1px solid rgb(222, 230, 240);
   padding: $section-padding;
   background-color: $bg-white-haf-color;
