--- a/style/contact.scss
+++ b/style/contact.scss
@@ -1,6 +1,7 @@
 @import 'common';
 .contact {
   max-width: 1440px;
+  min-width: 350px;
   display: flex;
   background-color: rgb(234, 243, 255);
   border-radius: 10px;
