--- a/style/customers.css
+++ b/style/customers.css
@@ -105,14 +105,23 @@
 .customers {
   max-width: 1920px;
   min-width: 350px;
-  padding: 72px;
+  padding: 70px 20px;
 }
 
 .customers-cont {
-  max-width: 1440px;
+  max-width: 1600px;
 }
 
-.customers-cont .swiper-slid h3 {
+.customers-cont .swiper-slide {
+  padding: 0px;
+}
+
+.customers-cont .swiper-slide h3 {
   line-height: 1.2;
+}
+
+.customers-cont .swiper-slide-img {
+  border-radius: 10px;
+  overflow: hidden;
 }
 /*# sourceMappingURL=customers.css.map */
