--- a/style/customers.scss
+++ b/style/customers.scss
@@ -2,13 +2,18 @@
 .customers {
   max-width: 1920px;
   min-width: 350px;
-  padding: $section-padding;
+  padding: 70px 20px;
   &-cont {
-    max-width: 1440px;
+    max-width: 1600px;
     .swiper {
-      &-slid {
+      &-slide {
+        padding: 0px;
         h3 {
           line-height: 1.2;
+        }
+        &-img {
+          border-radius: 10px;
+          overflow: hidden;
         }
       }
     }
