--- a/style/nav.css
+++ b/style/nav.css
@@ -123,6 +123,14 @@
           box-shadow: none;
 }
 
+.navigation .nav-link {
+  color: #32382e;
+}
+
+.navigation .nav-link:hover {
+  color: #1566dc;
+}
+
 .navigation-brand {
   width: 90px;
   height: 24px;
@@ -131,6 +139,7 @@
 .navigation .btn-primary {
   background-color: #1082ea;
   padding-inline: 30px;
+  border: 0px;
   -webkit-box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.32);
           box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.32);
 }
