--- a/style/nav.scss
+++ b/style/nav.scss
@@ -17,6 +17,14 @@
       }
     }
   }
+  .nav {
+    &-link {
+      color: rgb(50, 56, 46);
+      &:hover {
+        color: rgb(21, 102, 220);
+      }
+    }
+  }
 
   &-brand {
     width: 90px;
@@ -27,7 +35,7 @@
     &-primary {
       background-color: rgb(16, 130, 234);
       padding-inline: 30px;
-      //   box-shadow: 0px 5px 15px 0px rgb(0 0 0 / 32%);
+      border: 0px;
       box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.32);
       &:hover {
         background-color: rgb(54, 149, 238);
