--- a/style/hero.scss
+++ b/style/hero.scss
@@ -100,3 +100,85 @@
     }
   }
 }
+
+.hero {
+  width: 100%;
+  height: 100%;
+  background-image: url(https://res.cloudinary.com/fxtr/image/upload/f_auto,c_limit,w_3840,q_auto/v1668421119/contentful/hero/Customers%20V2/D_UK_Blue_uy1qss.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 40px;
+  min-width: 350px;
+  &-cont {
+    padding: 20px 90px;
+    max-width: 1440px;
+  }
+  &-mbimg {
+    display: none;
+  }
+  .FillCard {
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 40px;
+  }
+  .input {
+    &-div {
+      // border: 1px solid red;
+      display: flex;
+      align-items: baseline;
+      justify-content: center;
+      margin-bottom: 20px;
+      position: relative;
+      input {
+        background-color: rgba(240, 242, 244, 1);
+        border-radius: 5px;
+        border: 0px;
+        padding: 10px 70px;
+        &[type='submit'] {
+          background-color: rgb(21, 102, 220);
+        }
+      }
+      .icon {
+        position: absolute;
+        left: 8%;
+      }
+    }
+  }
+}
+
+@media (max-width: 992px) {
+  .hero {
+    padding: 20px;
+    &-cont {
+      padding: 20px 30px;
+    }
+    .FillCard {
+      padding: 30px;
+    }
+  }
+}
+@media (max-width: 768px) {
+  .hero {
+    background-image: none;
+    padding: 0px;
+    &-cont {
+      padding: 0px;
+      max-width: 1440px;
+    }
+    &-mbimg {
+      background-image: url(https://res.cloudinary.com/fxtr/image/upload/f_auto,c_limit,w_1920,q_auto/v1668421120/contentful/hero/Customers%20V2/M_UK_Blue_l5gy4n.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      padding: 90px;
+      display: block;
+    }
+    .FillCard {
+      border-radius: 0px;
+      padding: 40px 20px 30px 20px;
+      clip-path: polygon(100% 0, 100% 100%, 51% 100%, 0% 100%, 0 0, 48% 6%);
+      transform: translateY(-50px);
+    }
+  }
+}
