--- a/style/common.css
+++ b/style/common.css
@@ -7,6 +7,18 @@ body {
   overflow: hidden;
 }
 
+.text-color-primary {
+  color: #1566dc;
+}
+
+.text-color-dark {
+  color: #32382e;
+}
+
+.text-dark-primary-color {
+  color: #203a52;
+}
+
 .bg-primary {
   background-color: #1566dc;
 }
