--- a/style/hero.scss
+++ b/style/hero.scss
@@ -124,6 +124,14 @@
     padding: 40px;
     &-btn {
       text-decoration: none;
+      color: #4a5a6d;
+      transition: all 0.5s;
+      margin-right: 15px;
+      &:hover {
+        margin-right: 30px;
+        text-decoration: underline;
+        color: rgb(21, 102, 220);
+      }
     }
   }
   .input {
@@ -180,7 +188,7 @@
     }
     .FillCard {
       border-radius: 0px;
-      padding: 40px 20px 30px 20px;
+      padding: 70px 00px 0px 00px;
       clip-path: polygon(100% 0, 100% 100%, 51% 100%, 0% 100%, 0 0, 48% 6%);
       transform: translateY(-50px);
     }
